[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Stiky"
version = "0.1.0"
description = "Blog platform"
authors = [{ name = "stiky" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.27",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg~=0.29",
    "alembic~=1.13",
    "pydantic~=2.6",
    "pydantic-settings~=2.2",
    "passlib[bcrypt]~=1.7",
    "python-jose[cryptography]~=3.3",
    "pyjwt[crypto]~=2.8",
    "httpx~=0.27",
    "redis~=5.0",
    "celery~=5.3",
    "itsdangerous~=2.1",
    "bleach~=6.1",
    "markdown-it-py~=3.0",
    "types-redis~=4.6.0.20240106",
    "types-python-jose~=3.3.4",
    "orjson~=3.9",
    "structlog~=24.1",
    "email-validator~=2.1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
test = [
    "pytest~=8.1",
    "pytest-asyncio~=0.23",
    "pytest-cov~=4.1",
    "asgi-lifespan~=2.1",
    "fakeredis~=2.22",
    "freezegun~=1.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100